# ny-income-tax-component-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  devfile.yaml  experiment.ipynb  pyproject.toml  requirements.txt
scripts/: experiment.py
