[tool.poetry]
name = "ny-income-tax-analysis"
version = "0.0.1"
description = ""
authors = ["Jannik Kissinger"]
readme = "README.md"

[tool.poetry.dependencies]
# common
python = "3.10.*" # has to match the version used in the backend base image
jupyter = "^1.0.0"
pandas = "^2"
umap-learn = "^0.5.3"
scikit-learn = "^1.2.1"

# tensorflow
# macOS
tensorflow-macos = { version = "^2.10.0", markers = "sys_platform == 'darwin'" }
tensorflow-metal = { version = "^1", markers = "sys_platform == 'darwin'" } # Apple ML GPU optimisation
# default:
tensorflow = { version = "^2.10.0", markers = "sys_platform != 'darwin'" }
#
torch = "^2.0.1"
lightning = "^2.0.4"

# analytics:
pandas-profiling = "^3.6.6"
#dtale = "^2.10.0"
jupytext = "^1.14.7"



[tool.poetry.group.dev.dependencies]
poetry = "1.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"scripts/" = "py:percent"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
minversion = "6.0"
# --tb=line: shorter traceback format (only one line per failure)
# -rfEPpxX: display short summary info
addopts = ["--tb=line", "-rfEPpxX"]
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] (%(filename)s:%(lineno)s) %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 0
line_length = 120
